# voicesaju

./: .gitignore  .gitmodules  .prettierrc.json  PRD.md  STATUS.md  docker-compose.yml  issues.md  ruff.toml  scripts  templates
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_postgres_enums.py  0003_users_devices.py  0004_profiles_saju_charts.py  0005_free_tokens.py  0006_payments_subscriptions_refunds.py  0007_readings_tables.py  0008_tarot_tables_seed.py  0009_quote_intro_character.py  0010_tone_tables.py  0011_seed_tone_eval_cases.py  0012_reading_audio_metadata.py  0013_followup_audio_r2_key.py  0014_quote_cards_source_kind.py  0015_subscriptions_cancel_requested_at.py  0016_refunds_status_fields.py  0017_audit_events.py
api/scripts/: generate_saju_fixtures.py  upload_tarot_art.py
api/tests/: conftest.py
api/tests/fixtures/: saju_known_cases.json  tone_evalset.json
api/tests/integration/: test_migration_0002_enums.py
api/tests/regression/: test_saju_known_cases.py  test_tone_evalset.py
api/tests/unit/: test_app_factory.py  test_db_engine.py  test_design_system_tokens_present.py  test_docker_compose_config.py  test_envelope_aad_mismatch.py  test_envelope_iv_randomness.py  test_envelope_key_rotation.py  test_envelope_roundtrip.py  test_grafana_dashboard.py  test_health.py  test_migration_0002_enums_declaration.py  test_tone_regression_workflow.py
api/voicesaju/: __init__.py  config.py  main.py  tracing.py
(+527 files in other folders)
