[project]
name = "voicesaju"
version = "0.1.0"
description = "VoiceSaju backend service (FastAPI)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "cryptography>=42.0,<44.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "greenlet>=3.0,<4.0",
    "asyncpg>=0.29,<0.31",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.4,<1.0",
    "black>=24.3,<26.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voicesaju"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers -m 'not integration'"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires external services (Postgres/Redis); excluded by default.",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 88
target-version = ["py311"]

[dependency-groups]
dev = [
    "aiosqlite>=0.19,<1.0",
]
